Release 0.5 (in development)
============================

New features added
------------------

* Added a distutils command `build_sphinx`: When Sphinx is installed,
  you can call ``python setup.py build_sphinx`` for projects that
  have Sphinx documentation, which will build the docs and place them
  in the standard distutils build directory.

* `SerializingHTMLBuilder` was added as new abstract builder that can
  be subclassed to serialize build HTML in a specific format.  The
  `PickleHTMLBuilder` is a concrete subclass of it that uses pickle as
  serialization implementation.

* `JSONHTMLBuilder` was added that similarily to `PickleHTMLBuilder`
  dumps the generated HTML into JSON files for further processing.

* The `automodule` directive now supports the ``synopsis``,
  ``deprecated`` and ``platform`` options.

* The HTML builders have two additional attributes now that can be used
  to disable the anchor-link creation after headlines and definition
  links.  EXPERIMENTAL

* sphinx.doc.autodoc has a new event ``autodoc-process-signature`` that
  allows tuning function signature introspection.

* Added new events: ``env-updated`` and ``missing-reference``.


Release 0.4.2 (Jul 29, 2008)
============================

* Fix rendering of the ``samp`` role in HTML.

* Fix a bug with LaTeX links to headings leading to a wrong page.

* Reread documents with globbed toctrees when source files are
  added or removed.

* Add a missing parameter to PickleHTMLBuilder.handle_page().

* Put inheritance info always on its own line.

* Don't automatically enclose code with whitespace in it in quotes;
  only do this for the ``samp`` role.

* autodoc now emits a more precise error message when a module
  can't be imported or an attribute can't be found.

* The JavaScript search now uses the correct file name suffix when
  referring to found items.

* The automodule directive now accepts the ``inherited-members``
  and ``show-inheritance`` options again.
