@@ -4,6 +4,10 @@ Release 0.5 (in development)
 New features added
 ------------------
 
+* The new extension ``sphinx.ext.intersphinx`` half-automatically
+  creates links to Sphinx documentation of Python objects in other
+  projects.
+
 * Added a distutils command `build_sphinx`: When Sphinx is installed,
   you can call ``python setup.py build_sphinx`` for projects that
   have Sphinx documentation, which will build the docs and place them
